--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>Throwdown Games</title>
     <link rel="icon" type="image/svg+xml" href="Images/dice.svg">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 
     <body>
 
         <header>
-            <h2>Throwdown Games</h2>
+            <h2>Throwdown games</h2>
             <h1>Rock Paper Scissors</h1>
             <p>Choose Rock, Paper, or Scissors to play against the computer</p>
         </header>
@@ -58,7 +58,6 @@
 
     </body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
 </html>
