--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </hr>
 
-        <footer class="bg-primary text-white text-center py-3">
+        <footer>
             <p>&copy; 2025 ThrowdownGames | <a href="mailto:rcflig@wits.edu" class="text-white">rcflig@wits.edu</a></p>
         </footer>
 
