--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 You’ll choose one of three shapes with your hand:</p>
 
             <p><strong>Rock</strong> (a mighty fist!): Crushes <strong>Scissors</strong></br>
-                <strong>Scissors</strong> (snip snip!): Cut through <strong>Paper</strong></br>
+                <strong>Scissors</strong> (snip snip!): Cuts through <strong>Paper</strong></br>
                 <strong>Paper</strong> (a smooth open hand!): Covers up <strong>Rock</strong></p>
 
             <p>If you both choose the same shape, it’s a tie—but don’t worry, you can always try again!
