I'm being nitpicky now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Throwdown Games</title>
+    <title>ThrowdownGames</title>
     <link rel="icon" type="image/svg+xml" href="Images/dice.svg">
     <link rel="stylesheet" href="styles.css">
     
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <h2>Throwdown games</h2>
+            <h2>ThrowdownGames</h2>
             <h1>Rock Paper Scissors</h1>
             <p>Choose Rock, Paper, or Scissors to play against the computer</p>
         </header>
@@ -23,8 +23,8 @@
                 You’ll choose one of three shapes with your hand:</p>
 
             <p><strong>Rock</strong> (a mighty fist!): Crushes <strong>Scissors</strong></br>
-                <strong>Scissors</strong> (snip snip!): Cuts through <strong>Paper</strong></br>
-                <strong>Paper</strong> (a smooth open hand!): Covers up <strong>Rock</strong></p>
+                <strong>Paper</strong> (a smooth open hand!): Covers up <strong>Rock</strong></br>
+                <strong>Scissors</strong> (snip snip!): Cuts through <strong>Paper</strong></p>
 
             <p>If you both choose the same shape, it’s a tie—but don’t worry, you can always try again!
 
