--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>ThrowdownGames</title>
+    <title>ThrowdownGames.io</title>
     <link rel="icon" type="image/svg+xml" href="Images/dice.svg">
     <link rel="stylesheet" href="styles.css">
     
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <h2>ThrowdownGames</h2>
+            <h2>ThrowdownGames.io</h2>
             <h1>Rock Paper Scissors</h1>
             <p>Choose Rock, Paper, or Scissors to play against the computer</p>
         </header>
