--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <h2>ThrowdownGames.io</h2>
+            <h2>ThrowdownGames</h2>
             <h1>Rock Paper Scissors</h1>
             <p>Choose Rock, Paper, or Scissors to play against the computer</p>
         </header>
