--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article>
 
             <p>Welcome to the exciting world of Rock, Paper, Scissors! In this fun game, 
-                you’ll be facing off against the computer to see who’s the ultimate champion. 
+                you’ll be facing off against the computer to see who’s the ultimate champion.</br>
                 Here’s how it works:</br>
                 You’ll choose one of three shapes with your hand:</p>
 
@@ -30,7 +30,8 @@
 
                 Whether you’re here for a quick decision or just a fun challenge, 
                 Rock, Paper, Scissors is the perfect game to keep things lighthearted 
-                and entertaining. Ready to take on the computer? Let’s see who wins! 👊🖐️✌️</p>
+                and entertaining. Ready to take on the computer?</br>
+                Let’s see who wins! 👊🖐️✌️</p>
         
         </article>
 
