--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
 
             <button id="play-again">Play Again!</button>
             
-        </div>    
+        </div>
+
+        <article id="tip">
+            <p>Press 'r' for Rock, 'p' for Paper, and 's' for Scissors</br>
+               Press Enter to play again
+            </p>
+        </article>
 
         </hr>
 
