--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
 
         <article id="tip">
-            <p>Press 'r' for Rock, 'p' for Paper, and 's' for Scissors</br>
-               Press Enter to play again
+            <p>Press <strong>R</strong> for Rock, <strong>P</strong> for Paper, and <strong>S</strong> for Scissors</br>
+               Press <strong>Enter</strong> to play again
             </p>
         </article>
 
