--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <header>
             <h2>ThrowdownGames</h2>
-            <h1>Rock Paper Scissors</h1>
+            <h1>ROCK PAPER SCISSORS</h1>
             <p>Choose Rock, Paper, or Scissors to play against the computer</p>
         </header>
 
@@ -60,7 +60,7 @@
         </hr>
 
         <footer>
-            <p>&copy; 2025 ThrowdownGames | <a href="mailto:rcflig@wits.edu" class="text-white">rcflig@wits.edu</a></p>
+            <p>&copy; 2025 ThrowdownGames.io | <a href="mailto:rcflig@wits.edu" class="text-white">rcflig@wits.edu</a></p>
         </footer>
 
     </body>
